# hbm_riddle_solver

./: Cargo.toml  README.md
src/: main.rs  sign_iterator.rs
