[package]
name = "riddle_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
hexhex = "1.1.1"
hotpath = { version = "0.5.3", optional = true }
nonempty = "0.12.0"
rand = "0.9.2"
rayon = "1.11.0"
sha2 = "0.10.9"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]
debug_hash = []
split = []
combine_dictionary_options = []

[profile.release]
debug = true
